feat: scaffolding configuration

--- a/angular.json
+++ b/angular.json
@@ -86,7 +86,8 @@
             "assets": [
               {
                 "glob": "**/*",
-                "input": "public"
+                "input": "public",
+                "output": "src/assets"
               }
             ],
             "styles": [
@@ -97,5 +98,8 @@
         }
       }
     }
+  },
+  "cli": {
+    "analytics": "04c7385b-1638-4c32-91a7-09d93f68d0af"
   }
 }
